--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -78,7 +78,7 @@ defaultGraphic: 'graphic-default.png'
 {% else %}
 <div class="ps-item coffee">
 <div class="ps-title">
-Caffinate me
+caffeinate me
 </div>
 <div class="ps-body">
 If you have ever found my writing valuable and you want to help me continue avoiding doing my laundry, you can <a href="https://www.buymeacoffee.com/fromjason" target="_blank">buy me a coffee</a>. It would mean a lot.
