--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-defaultGraphic: 'graphic-default.png'
+defaultGraphic: 'graphic-5.png'
 body: body-primary
 ---
 <header class="header">
