--- a/_includes/partials/jumplink.njk
+++ b/_includes/partials/jumplink.njk
@@ -1,3 +1,1 @@
-<a href="#ps-aia" class="jump-link w-inline-block">
-                  <div class="aia">AAA<sup>†</sup></div>
-               </a>
+ <a href="https://www.buymeacoffee.com/fromjason" target="_blank" class="jump-link w-inline-block"><img src="/img/coffee-cup-mug-svgrepo-com.svg" loading="lazy" alt="" class="image-2"></a>
