--- a/_includes/partials/masthead.njk
+++ b/_includes/partials/masthead.njk
@@ -1,6 +1,22 @@
-               <aside class="masthead">
-                  <img src="{{ settings.siteRoot}}/img/{{ logo }}" loading="lazy" alt="grotesque mask illustration" class="deckhead-img">
-                  <h1 class="display">{{ title }}</h1>
-                  <p style="margin-bottom: 5px;" class="lead enter-text">{{ description }}</p>
-                  {% include "partials/cta.njk" %}
-               </aside>
+
+             
+                <div class="masthead">
+      <img src="images/logo-fromjason.svg" loading="lazy" alt="grotesque mask illustration" class="deckhead-img-copy">
+      
+        <div class="div-block-12">
+          <h1 class="display-copy">from jason</h1>
+          <div class="display-2nd-line">Odes &amp; satire<span class="text-span-8">s</span></div>
+          <div class="display-3rd-line">And other matters</div>
+          <div class="display-4th-line">Of things &amp; stuff</div>
+          <div class="author-lede">written by: jason velazquez</div>
+          <div class="quote-block">
+            <div class="text-block-12">⭑⭑⭑⭑</div>
+            <div class="lead-quote">&quot;Another web nerd telling us we&#x27;re doing the internet wrong”</div>
+            <div class="lead-quote-name">— hacker news commenter</div>
+          </div>
+          <div class="div-block-14">
+            <div class="quote-lead">&quot;Web nerds tell <strong>‘</strong>normal people&#x27; they&#x27;re doing the internet wrong... again.”</div>
+            <div class="text-block-9">—slashdot user</div>
+          </div>
+        </div>
+      </div>
