--- a/content/feeds/json-notebook.njk
+++ b/content/feeds/json-notebook.njk
@@ -5,7 +5,7 @@ sub: 'notebook'
 ---
 {
     "version": "https://jsonfeed.org/version/1.1",
-    "title": "{{ subsdata.notebook.fulltitle }}",
+    "title": "hey json",
     "language": "{{ subsdata.notebook.language }}",
     "home_page_url": "{{ subsdata.notebook.url | addPathPrefixToFullUrl }}",
     "feed_url": "{{ permalink | htmlBaseUrl(subsdata.notebook.url) }}",
