--- a/content/index.njk
+++ b/content/index.njk
@@ -1,22 +1,50 @@
 ---
 layout: layouts/home.njk
-eleventyNavigation:
-  key: from jason
-  order: 1
 numberOfLatestPostsToShow: 5
-rssDir: '/p/notebook'
-title: from jason
-description: A digital garden for a physical meat bag.
-logo: 'logo-fromjason.svg'
-openGraph: 'opengraph-fromjason.png'
+openGraph: 'fromjason'
 sub: fromjason
+mastheadLogoUrl: '/img/logo-fromjason.svg'
 ---
-<article class="h-card article">
-<h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
-<p class="p-note">I'm a digital freelancer, writer, uncle, <a href="https://www.washingtonpost.com/nation/2018/12/05/rudy-giulianis-typo-became-an-anti-trump-message-he-blamed-twitter-this-atlanta-man-pranked-him/" title="My Rudy Giuliani trolling">internet troublemaker</a>, and fond admirer of the French Goodbye.</p>
-<p><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a> is my <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/">digital garden</a>— a personal website where I tend to <a href="/all/" title="all posts">my writing</a>, <a href="/me/now/" title="me, now">projects</a>, <a href="/p/stories/s/oddities/" title="oddities series">oddities</a>, interesting finds, failed dreams, and new hopes. I recently added a micro.blog subdomain as an experiment. Check it out: <a class="accent" href="https://micro.fromjason.xyz">micro.fromjason.xyz</a>.</p>
-<p>Welcome. Feel free to <a href="https://www.fromjason.xyz/p/" title="all posts">poke around</a>, follow one of my feeds (<a href="https://www.fromjason.xyz/p/notebook/feed/feed.xml" title="notebook RSS">here's my notebook</a>), or <a href="https://www.fromjason.xyz/me/" title="me page">contact me</a> directly. I'm glad you're here.</p>
+
+<article class="article">
+   <h2>What's up weirdos, I'm <span class="p-given-name">Jason</span>.</h2>
+   <p class="p-note">I'm a digital freelancer, writer, uncle, <a href="https://www.washingtonpost.com/nation/2018/12/05/rudy-giulianis-typo-became-an-anti-trump-message-he-blamed-twitter-this-atlanta-man-pranked-him/" title="My Rudy Giuliani trolling">internet troublemaker</a>, and fond admirer of the French Goodbye.</p>
+   <p><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a> is my <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/">digital garden</a>— a personal website where I tend to <a href="/all/" title="all posts">my writing</a>, <a href="/me/now/" title="me, now">projects</a>, <a href="/p/stories/s/oddities/" title="oddities series">oddities</a>, interesting finds, failed dreams, and new hopes.
+      I recently added a micro.blog subdomain as an experiment. Check it out: <a class="accent" href="https://micro.fromjason.xyz">micro.fromjason.xyz</a>.
+   </p>
+   
+   <p>Welcome. Feel free to <a href="https://www.fromjason.xyz/p/" title="all posts">poke around</a>, follow one of my feeds (<a href="https://www.fromjason.xyz/p/notebook/feed/feed.xml" title="notebook RSS">here's my notebook</a>), or <a href="https://www.fromjason.xyz/me/" title="me page">contact me</a> directly. I'm glad you're here.</p>
 </article>
+<h3>Popular posts</h3>
+<div class="auto-list-block-2">
+   <div reversed="" class="auto-list-2">
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/notebook/where-have-all-the-websites-gone/" class="list-item-link truncate">Where have all the websites gone?</a>
+         <br><span class="small muted">We used to visit cool independent websites and share them with our friends. Where did they all go?</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/notebook/any-technology-indistinguishable-from-magic-is-hiding-something/" class="list-item-link truncate">Any technology indistinguishable from magic is hiding something</a>
+         <br><span class="small muted">In part 2 of <i>Where did all the websites go?</i> we discover that "the cloud” is just the internet, and the internet is owned by a surprisingly small number of corporations.</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/notebook/copy-acquire-kill-how-meta-could-pull-off-the-most-extraordinary-pivot-in-tech-history/" class="list-item-link truncate">Copy, Acquire, Kill— How Meta could pull off the most extraordinary pivot in tech history</a>
+         <br><span class="small muted">Why is Meta suddenly interested in Mastodon and ActivityPub?</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/notebook/the-village-effect-of-the-greater-web/" class="list-item-link truncate">The Village Effect of the Greater Web</a>
+         <br><span class="small muted">Why do we confine ourselves to a handful of apps? We look to M. Night Shyamalan's The Village for answers.</span>
+      </div>
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/travel/encinitas-california/" class="list-item-link truncate">Encinitas, California</a>
+         <br><span class="small muted">My weekend getaway to the lovely south California where I fantasize of becoming rich.</span>
+      </div>
+      
+   </div>
+</div>
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
 <h3>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %} from all plots</h3>
