--- a/content/listings/all.njk
+++ b/content/listings/all.njk
@@ -1,6 +1,9 @@
 ---
 title: All posts from everywhere
 permalink: "/all/"
+eleventyComputed: {
+		title: "All posts from all plots"
+	}
 ---
 
 <h1>{{ title }}</h1>
