--- a/content/me/colophon.njk
+++ b/content/me/colophon.njk
@@ -32,7 +32,7 @@ sub: me
 
 <h2>Other inspirations</h2>
 
-<p>>&nbsp;&nbsp;<a href="https://web.archive.org/web/20130501212555/http://ia.net/blog/sweep-the-sleaze/">Information Architects website design circa 2011</a></p>
+<p><a href="https://web.archive.org/web/20130501212555/http://ia.net/blog/sweep-the-sleaze/">Information Architects website design circa 2011</a></p>
 
 <p><a href="https://writefreely.org">Write Freely, open source writing space</a></p>
 
