--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -1,12 +1,12 @@
 ---
 title: Jason Velazquez
 description: This section is about me, Jason. It includes a few sub pages, plus where to find me.  Why are you looking for me? Weirdo. (Please look for me). 
-graphic: 'jasonvelazquez.jpg'
-graphicAlt: 'picture of Jason'
+graphic: '20a.png'
+graphicAlt: 'illustration of a mask'
 plot: me
 eleventyComputed:
   eleventyNavigation:
-    key: "me stuff"
+    key: "schemes"
     order: "2"
 
 ---
@@ -14,6 +14,7 @@ eleventyComputed:
 <div class="h-card p-author">
    <h1 class="p-name">{{ title }}</h1>
    <p class="lead under-title">{{ description }}</p>
+  
    {% set filterByMe = collections.me | include("data.sub", "me") %}
    {% set postslist = filterByMe %}
    {% include "mepostslist.njk" %}
@@ -22,14 +23,14 @@ eleventyComputed:
    <h3>Email</h3>
    <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:inbox@jvelazquez.email" title="my email address">Email Jason</a>.</p>
    <h3>Socials</h3>
-   <p>I'm slowly moving away from centralized social media, <i>in theory</i>. My goal is to step away first, then delete. That's
-how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
+   <p>I'm slowly moving away from centralized social media, <i>in theory</i>. In practice, I'm still fairly active on these accounts. I'm spending more time on Mastodon these days</p>
    <ul>
       <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
       <li>Threads: <a href="https://www.threads.net/@jasondotgov" rel="me" title="my threads">@jasondotgov</a></li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
+    <li>Signal: fromjason.01</li>
    </ul>
-   <h3 id="rss-feeds-by-plot">RSS feeds by plot</h3>
+   <h3>RSS feeds by plot</h3>
    <p>You can now subscribe to the indvidual plots that make up From Jason  <i>*air horn noise*</i>. Use the links below or copy / paste the plot's url into your favorite RSS reader.</p>
    <p>Note: both xml and json versions of my rss feed provide the same content and should both work in most reeders</p>
 
@@ -37,14 +38,10 @@ how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
       <li>notebook:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook" class="accent">json</a></li>
       <li>freelance:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance" class="accent">json</a></li>
       <li>stories:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
-      <li>travel:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/travel/feed/feed.xml" title="subscribe rss travel" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/travel/feed/feed.json" title="subscribe rss travel" class="accent">json</a></li>
+      <li>travel:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/p/travel/feed/feed.xml" title="subscribe rss travel" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/p/travel/feed/feed.json" title="subscribe rss travel" class="accent">json</a></li>
    </ol>
    
-   <h3 id="my-curated-lists">My public bookmarks & lists</h3>
-   <p>
-Note 12/10/2023: I am in the process of revamping my bookmarks and curation. if you came here hoping for a big list of cool sites, you'll want to come back later. For now, most of my lists are disabled. 
-01/09/2024: I'm working on it promise.
-</p>
+
 </div>
 
 
