--- a/content/me/lorem-ipsum-2-0.njk
+++ b/content/me/lorem-ipsum-2-0.njk
@@ -18,7 +18,7 @@ sub: me
     enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros
     dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus
     nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
-    tristique posuere.
+    tristique.
   </p>
 </div>
 <div class="ipsum-div">
@@ -27,11 +27,11 @@ sub: me
 </div>
 <div class="ipsum-div">
 <a role="button" data-target="lorem-3" class="copy-btn" style="font-size: var(--text--small-font-size); color: var(--color--accent);">copy</a>
-  <p id="lorem-3" class="lorem-para">Aesthetica Structurae</p>
+  <p id="lorem-3" class="lorem-para">Aesthetica Structurae ut Vocabulay Rividax</p>
 </div>
 <div class="ipsum-div">
  <a role="button" data-target="lorem-4" class="copy-btn" style="font-size: var(--text--small-font-size); color: var(--color--accent);">copy</a>
-  <p id="lorem-4" class="lorem-para">Verborum Novitatem</p>
+  <p id="lorem-4" class="lorem-para">Verborum Novitatem in Apostrophorum Usus Mysterium Artis</p>
 </div>
 <div class="ipsum-div">
  <a role="button" data-target="lorem-5" class="copy-btn" style="font-size: var(--text--small-font-size); color: var(--color--accent);">copy</a>
