--- a/content/listings/all-notebook.njk
+++ b/content/listings/all-notebook.njk
@@ -1,10 +1,9 @@
 ---
-title: All notebook posts
 plot: notebook
 ---
 
 <h1>{{ title }}</h1>
-
+{# filteres for posts with the "sub" key and the value set in this page's "plot" key #}
 {% set FilterPostsByPlot = collections.posts | include("data.sub", plot) %}
 {% set postslist = FilterPostsByPlot %}
 {% include "postslist.njk" %}
