--- a/content/plots/index.njk
+++ b/content/plots/index.njk
@@ -1,23 +1,43 @@
 ---
-title: All plots
-description: Plots are how I organize my digital garden. 
+title: Plots
+description: Plots are how I organize my digital garden.
 plot: all
-graphic: '20.png'
+pageGraphic: 'graphic-758.png'
 graphicAlt: 'illustration of a mask'
 rssDir: '/p/notebook'
 layout: "layouts/page.njk"
 permalink: "/p/"
 eleventyNavigation:
-    key: all plots
+    key: plots
     order: 4
 ---
   
 <h1>{{ title }}</h1>
 <p class="lead under-title">{{ description }}</p>
 
-<div class="auto-list-block">
-{% set filterByPlotHomePage = collections.homepage | include("data.sub", "plots") %}
-{% set postslist = filterByPlotHomePage %}
-{% include "mepostslist.njk" %}
-
+<div class="auto-list-block-2">
+   <div reversed="" class="auto-list-2">
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/notebook/" class="list-item-link ">Notebook</a>
+         <br><span class="small muted">Very serious stuff. Typos included.</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/freelance/" class="list-item-link ">Freelance</a>
+         <br><span class="small muted">Freelance? In this economy?</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/stories/" class="list-item-link ">Stories</a>
+         <br><span class="small muted">Short, flash, & a secret third thing.</span>
+      </div>
+      
+      <div class="auto-list-item-3" style="margin-top: 1em;">
+         <a href="https://www.fromjason.xyz/p/travel/" class="list-item-link ">Travel</a>
+         <br><span class="small muted">I went to Italy once.</span>
+      </div>
+     
+      
+   </div>
 </div>
