--- a/content/index.njk
+++ b/content/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/home.njk
 numberOfLatestPostsToShow: 5
-openGraph: 'fromjason'
+openGraph: 'opengraph-fromjason.png'
 sub: fromjason
 mastheadLogoUrl: '/img/logo-fromjason.svg'
 ---
