--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -38,10 +38,6 @@ iframe {
 	font-size: var(--text--small-font-size);
 	margin-bottom: -2.5em;
 }
-/* reduced margin top for better architecture. the top sentence is always associated with the image. */
-img {
-  margin: .5em auto 2em auto;
-}
 
 /* removed align from things like quotes */
 quote, .quote {
@@ -61,4 +57,47 @@ img {
 }
 a:focus, a:focus-visible {
     font-style: normal !important;
+}
+
+.followCTA--box {
+	margin-top: .25em;
+	  font-family: var(--fonts--secondary-font-family);
+}
+
+.followCTA {
+	  font-family: var(--body--secondary-font);
+	  font-size: var(--font-size--small);
+	  text-decoration: none;
+	  color: var(--brand--red-ink) !important;
+}
+
+.drop-cap {
+    float: left;
+    clear: none;
+    max-width: 70px;
+    margin: .95em .75em 0 0;
+}
+
+.image-3 {
+    max-width: 250px;
+    margin-top: 4em;
+    margin-bottom: 4em;
+}
+
+.div-block-17 {
+    margin-top: 1.5em;
+}
+
+.div-block-18 {
+    margin-top: 1em;
+}
+
+.popular-link-title {
+    font-size: var(--font-size--lead);
+    line-height: 1.3;
+}
+
+.popular-link-summary {
+    margin-top: .5em;
+    line-height: 1.2;
 }
