--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -70,3 +70,34 @@ a:focus, a:focus-visible {
 	  text-decoration: none;
 	  color: var(--brand--red-ink) !important;
 }
+
+.drop-cap {
+    float: left;
+    clear: none;
+    max-width: 70px;
+    margin: .95em .75em 0 0;
+}
+
+.image-3 {
+    max-width: 250px;
+    margin-top: 4em;
+    margin-bottom: 4em;
+}
+
+.div-block-17 {
+    margin-top: 1.5em;
+}
+
+.div-block-18 {
+    margin-top: 1em;
+}
+
+.popular-link-title {
+    font-size: var(--font-size--lead);
+    line-height: 1.3;
+}
+
+.popular-link-summary {
+    margin-top: .5em;
+    line-height: 1.2;
+}
