--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -101,3 +101,24 @@ a:focus, a:focus-visible {
     margin-top: .5em;
     line-height: 1.2;
 }
+
+.section-header-home {
+    text-align: center;
+    letter-spacing: .25em;
+    -webkit-text-stroke-width: 1.4px;
+    text-transform: uppercase;
+    margin-top: 2.5em;
+    margin-bottom: 1.75em;
+    font-size: 130%;
+    line-height: 100%;
+    display: block;
+}
+
+@media screen and (max-width: 479px)
+.image-3 {
+    max-width: 250px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+}
