--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -110,7 +110,7 @@ a:focus, a:focus-visible {
     margin-top: 2.5em;
     margin-bottom: 1.75em;
     font-size: 130%;
-    line-height: 120%;
+    line-height: 100%;
     display: block;
 }
 
@@ -121,3 +121,53 @@ a:focus, a:focus-visible {
     margin-left: auto;
 }
 
+
+.display-new {
+    color: #004ed8;
+    letter-spacing: .15em;
+    -webkit-text-stroke-width: .7px;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 260%;
+    line-height: 100%;
+}
+
+@media screen and (max-width: 479px)
+.display-new {
+    text-align: center;
+    -webkit-text-stroke-width: .8px;
+    white-space: nowrap;
+    line-height: 120%;
+}
+}
+
+
+.deckhead-img-xl-2 {
+    color: var(--body--text-color);
+    text-align: left;
+    width: 250px;
+    margin-top: 0;
+    margin-bottom: 0;
+    display: block;
+}
+
+@media screen and (max-width: 479px)
+.deckhead-img-xl-2 {
+    width: 170px;
+}
+}
+
+
+.lead-2 {
+    font-size: var(--font-size--lead);
+    margin-top: .5em;
+    line-height: 130%;
+}
+
+@media screen and (max-width: 479px)
+.lead-2 {
+    text-align: center;
+    margin-top: 0;
+}
+}
