--- a/content/newsletter.njk
+++ b/content/newsletter.njk
@@ -6,7 +6,7 @@ permalink: "/newsletter.html"
 ---
 
 <header class="header">
-        
+      {% include "partials/nav.njk" %}  
         <div class="masthead"><img src="img/computer.png" alt="grotesque mask illustration" class="deckhead-img-xl-2">
           <div class="masthead-text-block">
             <h1 class="display-new">W.H.A.T.S Gone?</h1>
