--- a/content/newsletter.njk
+++ b/content/newsletter.njk
@@ -7,14 +7,14 @@ permalink: "/newsletter.html"
 
 <header class="header">
       {% include "partials/nav.njk" %}  
-        <div class="masthead"><img src="img/computer.png" alt="grotesque mask illustration" class="deckhead-img-xl-2">
+        <div class="masthead"><img src="img/computer.png" alt="computer illustration" class="deckhead-img-xl-2">
           <div class="masthead-text-block">
             <h1 class="display-new">W.H.A.T.S Gone?</h1>
             <p class="lead-2">(Where Have All The Sites Gone?)</p>
             <div class="display-2nd-line-2">A Newsletter</div>
             <div class="display-3rd-line">For Rediscovering</div>
             <div class="display-4th-line">The World Wide Web</div>
-            <p class="lead-copy">(Where Have All The Sites Gone?)</p>
+
           </div>
         </div>
         <article class="article">
