--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -157,16 +157,18 @@ a:focus, a:focus-visible {
     font-size: 1em;
 }
 
-@media screen and (max-width: 479px)
+@media screen and (max-width: 479px){
 
 .masthead-text-block {
     font-size: .75em;
 }
+
 .display-new {
     text-align: center;
     -webkit-text-stroke-width: .8px;
     white-space: nowrap;
     line-height: 120%;
+
 }
 
 .lead-2 {
@@ -182,6 +184,7 @@ a:focus, a:focus-visible {
     margin-top: .5em;
     font-size: 195%;
 }
+
 .display-2nd-line-2 {
     text-align: center;
     letter-spacing: .22em;
