--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -114,4 +114,5 @@ If you have ever found my writing valuable and you want to help me continue avoi
       <div class="ps-title">Referrals &amp; affiliates</div>
       <div class="ps-body"> I do <em>not</em> receive commission for anything I share, endorse, or discuss, anywhere on <em>From Jason</em>. I have no sponsorships, or advertiser agreements. If that ever changes, I will let you know.</div>
    </div>
+<img style="width: 150px; margin-top: 20px; margin-right: auto; margin-left: auto;" src="{{ settings.siteRoot}}/img/Badge_BlogPunk-2.svg" />
 </aside>
