--- a/content/index.njk
+++ b/content/index.njk
@@ -12,6 +12,7 @@ mastheadLogoUrl: '/img/logo-fromjason.svg'
             <p class="paragraph">hat's up, weirdos. I'm <a href="https://www.fromjason.xyz/me/bio/">Jason</a>. Welcome to my digital garden. I'm happy you're here. Please make yourself comfortable. By day, I'm a digital freelancer, copywriter, uncle, and cheese danish sommelier. By night, I drink the blood of my enemies in an old Mountain Dew bottle I found in a Buc-ee's bathroom. Kidding. I'm just a guy who likes to blog about <a href="https://www.fromjason.xyz/tags/technocrats/">technology</a>, <a href="https://www.fromjason.xyz/tags/design/">design</a>, <a href="https://www.fromjason.xyz/tags/the-web/">the web</a>, and anything I'm hyper fixated on at the time. </p>
           </div>
    <p>Welcome. Feel free to <a href="https://www.fromjason.xyz/p/" title="all posts">poke around</a>, follow one of my feeds (<a href="https://www.fromjason.xyz/p/notebook/feed/feed.xml" title="notebook RSS">here's my notebook</a>), or <a href="https://www.fromjason.xyz/me/" title="me page">contact me</a> directly. I'm glad you're here.</p>
+<p>🚪<a href="https://wiki.fromjason.xyz/Protest+Kit">Protest Kit</a></p>
 </article>
 <img src="img/bird-hp.png" class="image-3">
 <h3 class="section-header-home">Popular posts</h3>
