--- a/_includes/layouts/plot.njk
+++ b/_includes/layouts/plot.njk
@@ -16,6 +16,7 @@ openGraph: 'fromjason'
                </div>
  </header>
 <article class="article">
+<p>🍉 <a href="https://www.gofundme.com/f/help-young-muhammad-rebuild-a-life">Help Muhammad save his family</a></p>
      {{ content | safe }}
 </article>
 
