--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -1,4 +1,5 @@
-               <nav class="navbar">
+<p style="margin-top: .25em">🍉 <a href="https://www.gofundme.com/f/help-young-muhammad-rebuild-a-life">Help Muhammad save his family</a></p>
+<nav class="navbar">
                <a href="/" class="navbar-link w-inline-block"><img src="{{ settings.siteRoot }}/img/triplex.svg" loading="lazy" alt="" class="image"></a>
                {%- for entry in collections.all | eleventyNavigation %}
 					<a class="navbar-link" href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a>
