--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -5,4 +5,4 @@
 					<a class="navbar-link" href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a>
 				{%- endfor %}
                </nav>
-<p style="margin-top: .25em">🍉 <a href="https://www.gofundme.com/f/help-young-muhammad-rebuild-a-life">Help Muhammad save his family</a></p>
+<p style="margin-top: .25em; font-size: 0.85em;">🍉 <a href="https://www.gofundme.com/f/help-young-muhammad-rebuild-a-life">Help Muhammad save his family</a></p>
