--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -25,8 +25,7 @@ eleventyComputed:
    <p>I'm slowly moving away from centralized social media, <i>in theory</i>. My goal is to step away first, then delete. That's
 how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
    <ul>
-      <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
-      <li>Threads: <a href="https://www.threads.net/@jasondotgov" rel="me" title="my threads">@jasondotgov</a></li>
+      <li>Instagram: <a href="https://instagram.com/fromjason.xyz" rel="me" tilte="my instagram">@fromjason.xyz</a></li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
    </ul>
    <h3 id="rss-feeds-by-plot">RSS feeds by plot</h3>
